--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #093631;
   height: 100%;
 }
 
@@ -119,13 +119,16 @@ body {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1em;
   height: 300px;
   display: flex;
   width: 30%;
   justify-content: center;
   align-items: center;
+}
+
+.div-1, .div-2{
+    border-right: 2px solid #E6DACC;
 }
 
 
