--- a/css/main.css
+++ b/css/main.css
@@ -95,43 +95,74 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+/*BASE STYLES------------------------------------*/
 html {
-  background-color: #093631;
   height: 100%;
+  font-size: 16px;
+  width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
   padding: 2em;
-  font-size: 1.25em;
   height: 100%;
 }
 
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
+h1{
+  font-size: 4em;
+}
+
+/*SECTION STYLES--------------------------------*/
+header, footer, main{
+  width: 100%;
   display: flex;
+  align-items: center;
+}
+
+main{
+  font-size: 1.5em;
+  padding-bottom: 3%;
+  font-weight: 700;
+  border-bottom: 1px solid black;
+}
+
+footer{
+  padding-top: 2%;
+  margin-top: 2%;
+  font-weight: 700;
+  font-size: 1.25em;
+  border-top: 1px solid black;
+}
+
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
   justify-content: space-between;
 }
 
+/*COLUMN SECTION--------------------------------*/
 .div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
   line-height: 1.5em;
   font-size: 1em;
-  height: 300px;
   display: flex;
   width: 30%;
   justify-content: center;
   align-items: center;
+  padding: 0 20px 0 0;
+  margin-top: 2%;
 }
 
+/*formats column section's span headings*/
+.div-1 span, .div-2 span, .div-3 span {
+  text-transform: uppercase;
+  font-size: 2em;
+}
+
+/*adds a vertical bar inbetween columns*/
 .div-1, .div-2{
-    border-right: 2px solid #E6DACC;
+  border-right: 2px dotted #AD9E9A;
 }
-
-
 
 
 /* ==========================================================================
